tests/NormalTests/paczka1/fuzzy1/40920163.err
Error in line 1: qPlziVInH S566 68,9
Error in line 3: qPlziVInH A410 64,5
Error in line 6: Gg7NSWj288q A41` 97,7
Error in line 5: a1M4 S366 65,3
Error in line 2: 0JP A689 48,4
Error in line 10: 0JP S366 89,4
Error in line 15: 0JP A689 -2,4
Error in line 8: IcTPMgGYjRh S566 49,1
Error in line 14: a1M4 A689 3,6
Error in line 11: 0JP A689 39,0
Error in line 30: Gg7NSWj288q A410 204,2
Error in line 24: qPlziVInH A689 9,5
